--- a/rule_templates/DustinWin_Blacklist_BestCF.ini
+++ b/rule_templates/DustinWin_Blacklist_BestCF.ini
@@ -17,40 +17,44 @@ ruleset=🧱 代理域名,clash-domain:https://github.com/DustinWin/domain-list-
 ruleset=🎯 全球直连,clash-ipcidr:https://github.com/DustinWin/geoip/releases/download/ips/privateip.list,86400
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]📱 移动优选节点 IPv4`[]📱 移动优选节点 IPv6`[]🎗️ 联通优选节点 IPv4`[]🎗️ 联通优选节点 IPv6`[]📶 电信优选节点 IPv4`[]📶 电信优选节点 IPv6`[]☁️ CF 优选 IP 节点`[]🌐 CF 优选域名节点
-custom_proxy_group=📈 网络测试`select`[]🎯 全球直连`[]📱 移动优选节点 IPv4`[]📱 移动优选节点 IPv6`[]🎗️ 联通优选节点 IPv4`[]🎗️ 联通优选节点 IPv6`[]📶 电信优选节点 IPv4`[]📶 电信优选节点 IPv6`[]☁️ CF 优选 IP 节点`[]🌐 CF 优选域名节点
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]👉 手动选择`[]📱 移动优选节点 IPv4`[]📱 移动优选节点 IPv6`[]🎗️ 联通优选节点 IPv4`[]🎗️ 联通优选节点 IPv6`[]📶 电信优选节点 IPv4`[]📶 电信优选节点 IPv6`[]☁️ CF 优选 IP 节点`[]🌐 CF 优选域名节点
+custom_proxy_group=📈 网络测试`select`[]🎯 全球直连`[]🚀 节点选择`[]📱 移动优选节点 IPv4`[]📱 移动优选节点 IPv6`[]🎗️ 联通优选节点 IPv4`[]🎗️ 联通优选节点 IPv6`[]📶 电信优选节点 IPv4`[]📶 电信优选节点 IPv6`[]☁️ CF 优选 IP 节点`[]🌐 CF 优选域名节点
 custom_proxy_group=🧱 代理域名`select`[]🚀 节点选择`[]🎯 全球直连
 custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选择`select`[]📱 移动优选节点 IPv4`[]📱 移动优选节点 IPv6`[]🎗️ 联通优选节点 IPv4`[]🎗️ 联通优选节点 IPv6`[]📶 电信优选节点 IPv4`[]📶 电信优选节点 IPv6`[]☁️ CF 优选 IP 节点`[]🌐 CF 优选域名节点
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=📱 移动优选节点 IPv4`url-test`[]📱 移动优选节点 CMLiu_IPv4`[]📱 移动优选节点 CFYes_IPv4`[]📱 移动优选节点 WeTest_IPv4`https://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=📱 移动优选节点 IPv4`url-test`[]📱 移动优选节点 CMLiu_IPv4`[]📱 移动优选节点 VPS789_IPv4`[]📱 移动优选节点 CFYes_IPv4`[]📱 移动优选节点 WeTest_IPv4`https://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=📱 移动优选节点 IPv6`url-test`[]📱 移动优选节点 CMLiu_IPv6`[]📱 移动优选节点 CFYes_IPv6`[]📱 移动优选节点 WeTest_IPv6`https://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=🎗️ 联通优选节点 IPv4`url-test`[]🎗️ 联通优选节点 CMLiu_IPv4`[]🎗️ 联通优选节点 CFYes_IPv4`[]🎗️ 联通优选节点 WeTest_IPv4`https://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=🎗️ 联通优选节点 IPv6`url-test`[]🎗️ 联通优选节点 CMLiu_IPv6`[]🎗️ 联通优选节点 CFYes_IPv6`[]🎗️ 联通优选节点 WeTest_IPv6`https://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=📶 电信优选节点 IPv4`url-test`[]📶 电信优选节点 CMLiu_IPv4`[]📶 电信优选节点 CFYes_IPv4`[]📶 电信优选节点 WeTest_IPv4`https://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=📶 电信优选节点 IPv6`url-test`[]📶 电信优选节点 CMLiu_IPv6`[]📶 电信优选节点 CFYes_IPv6`[]📶 电信优选节点 WeTest_IPv6`https://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=☁️ CF 优选 IP 节点`url-test`[]☁️ CF 优选节点 CFSpeedTest`[]☁️ CF 优选节点 IPDB_IPv4`[]☁️ CF 优选节点 IPDB_IPv6`https://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=🎗️ 联通优选节点 IPv4`url-test`[]🎗️ 联通优选节点 CMLiu_IPv4`[]🎗️ 联通优选节点 VPS789_IPv4`[]🎗️ 联通优选节点 CFYes_IPv4`[]🎗️ 联通优选节点 WeTest_IPv4`https://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=🎗️ 联通优选节点 IPv6`url-test`[]🎗️ 联通优选节点 CFYes_IPv6`[]🎗️ 联通优选节点 WeTest_IPv6`https://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=📶 电信优选节点 IPv4`url-test`[]📶 电信优选节点 CMLiu_IPv4`[]📶 电信优选节点 VPS789_IPv4`[]📶 电信优选节点 CFYes_IPv4`[]📶 电信优选节点 WeTest_IPv4`https://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=📶 电信优选节点 IPv6`url-test`[]📶 电信优选节点 CFYes_IPv6`[]📶 电信优选节点 WeTest_IPv6`https://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=☁️ CF 优选 IP 节点`url-test`[]☁️ CF 优选节点 VPS789`[]☁️ CF 优选节点 CFSpeedTest`[]☁️ CF 优选节点 IPDB_IPv4`[]☁️ CF 优选节点 IPDB_IPv6`https://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=🌐 CF 优选域名节点`select`\.
-custom_proxy_group=📱 移动优选节点 CMLiu_IPv4`fallback`(?i)CMCC-IPv4_CMLiu`https://www.gstatic.com/generate_204`600
-custom_proxy_group=📱 移动优选节点 CMLiu_IPv6`fallback`(?i)CMCC-IPv6_CMLiu`https://www.gstatic.com/generate_204`600
-custom_proxy_group=📱 移动优选节点 CFYes_IPv4`fallback`(?i)CMCC-IPv4_CFYes`https://www.gstatic.com/generate_204`600
-custom_proxy_group=📱 移动优选节点 CFYes_IPv6`fallback`(?i)CMCC-IPv6_CFYes`https://www.gstatic.com/generate_204`600
-custom_proxy_group=📱 移动优选节点 WeTest_IPv4`fallback`(?i)CMCC-IPv4_WeTest`https://www.gstatic.com/generate_204`600
-custom_proxy_group=📱 移动优选节点 WeTest_IPv6`fallback`(?i)CMCC-IPv6_WeTest`https://www.gstatic.com/generate_204`600
-custom_proxy_group=🎗️ 联通优选节点 CMLiu_IPv4`fallback`(?i)CUCC-IPv4_CMLiu`https://www.gstatic.com/generate_204`600
-custom_proxy_group=🎗️ 联通优选节点 CMLiu_IPv6`fallback`(?i)CUCC-IPv6_CMLiu`https://www.gstatic.com/generate_204`600
-custom_proxy_group=🎗️ 联通优选节点 CFYes_IPv4`fallback`(?i)CUCC-IPv4_CFYes`https://www.gstatic.com/generate_204`600
-custom_proxy_group=🎗️ 联通优选节点 CFYes_IPv6`fallback`(?i)CUCC-IPv6_CFYes`https://www.gstatic.com/generate_204`600
-custom_proxy_group=🎗️ 联通优选节点 WeTest_IPv4`fallback`(?i)CUCC-IPv4_WeTest`https://www.gstatic.com/generate_204`600
-custom_proxy_group=🎗️ 联通优选节点 WeTest_IPv6`fallback`(?i)CUCC-IPv6_WeTest`https://www.gstatic.com/generate_204`600
-custom_proxy_group=📶 电信优选节点 CMLiu_IPv4`fallback`(?i)CTCC-IPv4_CMLiu`https://www.gstatic.com/generate_204`600
-custom_proxy_group=📶 电信优选节点 CMLiu_IPv6`fallback`(?i)CTCC-IPv6_CMLiu`https://www.gstatic.com/generate_204`600
-custom_proxy_group=📶 电信优选节点 CFYes_IPv4`fallback`(?i)CTCC-IPv4_CFYes`https://www.gstatic.com/generate_204`600
-custom_proxy_group=📶 电信优选节点 CFYes_IPv6`fallback`(?i)CTCC-IPv6_CFYes`https://www.gstatic.com/generate_204`600
-custom_proxy_group=📶 电信优选节点 WeTest_IPv4`fallback`(?i)CTCC-IPv4_WeTest`https://www.gstatic.com/generate_204`600
-custom_proxy_group=📶 电信优选节点 WeTest_IPv6`fallback`(?i)CTCC-IPv6_WeTest`https://www.gstatic.com/generate_204`600
-custom_proxy_group=☁️ CF 优选节点 CFSpeedTest`fallback`(?i)CF-IPv4_CFSpeedTest`https://www.gstatic.com/generate_204`600
-custom_proxy_group=☁️ CF 优选节点 IPDB_IPv4`fallback`(?i)CF-IPv4_IPDB`https://www.gstatic.com/generate_204`600
-custom_proxy_group=☁️ CF 优选节点 IPDB_IPv6`fallback`(?i)CF-IPv6_IPDB`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📱 移动优选节点 CMLiu_IPv4`fallback`(?i)(CMCC-IPv4_CMLiu)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📱 移动优选节点 CMLiu_IPv6`fallback`(?i)(CMCC-IPv6_CMLiu)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📱 移动优选节点 VPS789_IPv4`fallback`(?i)(CMCC-IPv4_VPS789)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📱 移动优选节点 CFYes_IPv4`fallback`(?i)(CMCC-IPv4_CFYes)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📱 移动优选节点 CFYes_IPv6`fallback`(?i)(CMCC-IPv6_CFYes)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📱 移动优选节点 WeTest_IPv4`fallback`(?i)(CMCC-IPv4_WeTest)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📱 移动优选节点 WeTest_IPv6`fallback`(?i)(CMCC-IPv6_WeTest)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=🎗️ 联通优选节点 CMLiu_IPv4`fallback`(?i)(CUCC-IPv4_CMLiu)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=🎗️ 联通优选节点 VPS789_IPv4`fallback`(?i)(CUCC-IPv4_VPS789)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=🎗️ 联通优选节点 CFYes_IPv4`fallback`(?i)(CUCC-IPv4_CFYes)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=🎗️ 联通优选节点 CFYes_IPv6`fallback`(?i)(CUCC-IPv6_CFYes)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=🎗️ 联通优选节点 WeTest_IPv4`fallback`(?i)(CUCC-IPv4_WeTest)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=🎗️ 联通优选节点 WeTest_IPv6`fallback`(?i)(CUCC-IPv6_WeTest)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📶 电信优选节点 CMLiu_IPv4`fallback`(?i)(CTCC-IPv4_CMLiu)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📶 电信优选节点 VPS789_IPv4`fallback`(?i)(CTCC-IPv4_VPS789)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📶 电信优选节点 CFYes_IPv4`fallback`(?i)(CTCC-IPv4_CFYes)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📶 电信优选节点 CFYes_IPv6`fallback`(?i)(CTCC-IPv6_CFYes)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📶 电信优选节点 WeTest_IPv4`fallback`(?i)(CTCC-IPv4_WeTest)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=📶 电信优选节点 WeTest_IPv6`fallback`(?i)(CTCC-IPv6_WeTest)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=☁️ CF 优选节点 VPS789`fallback`(?i)(CF-IPv4_VPS789)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=☁️ CF 优选节点 CFSpeedTest`fallback`(?i)(CF-IPv4_CFSpeedTest)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=☁️ CF 优选节点 IPDB_IPv4`fallback`(?i)(CF-IPv4_IPDB)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=☁️ CF 优选节点 IPDB_IPv6`fallback`(?i)(CF-IPv6_IPDB)`https://www.gstatic.com/generate_204`600
+custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=👉 手动选择`select`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
