--- a/rule_templates/DustinWin_Blacklist_NoAds.ini
+++ b/rule_templates/DustinWin_Blacklist_NoAds.ini
@@ -20,8 +20,8 @@ ruleset=🎯 全球直连,clash-ipcidr:https://github.com/DustinWin/geoip/releas
 ruleset=📲 电报消息,clash-ipcidr:https://github.com/DustinWin/geoip/releases/download/ips/telegramip.list,86400
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点
-custom_proxy_group=📈 网络测试`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]👉 手动选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点
+custom_proxy_group=📈 网络测试`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点
 custom_proxy_group=🤖 AI 平台`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点
 custom_proxy_group=📋 Trackerslist`select`[]🎯 全球直连`[]🚀 节点选择
 custom_proxy_group=🧱 代理域名`select`[]🚀 节点选择`[]🎯 全球直连
@@ -33,6 +33,8 @@ custom_proxy_group=🇹🇼 台湾节点`url-test`(?i)(🇹🇼|台|tw|taiwan|ta
 custom_proxy_group=🇯🇵 日本节点`url-test`(?i)(🇯🇵|日|jp|japan)`https://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=🇸🇬 新加坡节点`url-test`(?i)(🇸🇬|新|sg|singapore)`https://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(?i)(🇺🇸|美|us|unitedstates|united states)`https://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=👉 手动选择`select`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
