--- a/rule_templates/JMS_Full.yaml
+++ b/rule_templates/JMS_Full.yaml
@@ -5,63 +5,11 @@
 #   s3     - CN2 GIA（电信优质线路）
 #   s4     - 日本大阪 Softbank
 #   s5     - 荷兰 CN2 GIA
-#   s801   - Freedom（省流量）
+#   s801   - Freedom（省流量，0.1倍率）
 
 proxy-groups:
-  # ===== 主选择器 =====
-  - name: 🚀 节点选择
-    type: select
-    proxies:
-      - ⚡ JMS美国最快
-      - 🔄 JMS美国稳定IP
-      - 🇯🇵 日本节点
-      - 🇳🇱 荷兰节点
-      - 💰 省流量节点
-      - 🎯 直连
-
-  # ===== JMS 节点组 =====
-  # 最快节点：s1-s3 自动测速选最快
-  - name: ⚡ JMS美国最快
-    type: url-test
-    url: https://www.gstatic.com/generate_204
-    interval: 300
-    tolerance: 50
-    filter: "c78s[123]\\."
-    use:
-      - jmssub
-
-  # 最快节点：JMS 自动测速选最快（含省流量节点）
-  - name: ⚡ JMS全球最快
-    type: url-test
-    url: https://www.gstatic.com/generate_204
-    interval: 300
-    tolerance: 50
-    filter: "c78s([12345]|801)\\."
-    use:
-      - jmssub
-
-
-  # 稳定IP：s3优先，挂了用s1，再挂用s2（fallback模式）
-  - name: 🔄 JMS美国稳定IP
-    type: fallback
-    url: https://www.gstatic.com/generate_204
-    interval: 300
-    proxies:
-      - 📍 s3-CN2GIA
-      - 📍 s1-CN2GT
-      - 📍 s2-CN2GT
-
-  # 单节点（供稳定IP组引用）
-  - name: 📍 s3-CN2GIA
-    type: url-test
-    url: https://www.gstatic.com/generate_204
-    interval: 300
-    tolerance: 50
-    filter: "c78s3\\."
-    use:
-      - jmssub
-
-  - name: 📍 s1-CN2GT
+  # ===== JMS 原始节点组（按服务器分组）=====
+  - name: JMS洛杉矶(日常稳定,CN2 GT,s1)
     type: url-test
     url: https://www.gstatic.com/generate_204
     interval: 300
@@ -70,7 +18,7 @@ proxy-groups:
     use:
       - jmssub
 
-  - name: 📍 s2-CN2GT
+  - name: JMS洛杉矶(日常稳定,CN2 GT,s2)
     type: url-test
     url: https://www.gstatic.com/generate_204
     interval: 300
@@ -79,8 +27,16 @@ proxy-groups:
     use:
       - jmssub
 
-  # 其他地区节点
-  - name: 🇯🇵 日本节点
+  - name: JMS洛杉矶(高速优质,CN2 GIA,s3)
+    type: url-test
+    url: https://www.gstatic.com/generate_204
+    interval: 300
+    tolerance: 50
+    filter: "c78s3\\."
+    use:
+      - jmssub
+
+  - name: JMS日本大阪(联通友好,Softbank,s4)
     type: url-test
     url: https://www.gstatic.com/generate_204
     interval: 300
@@ -89,7 +45,7 @@ proxy-groups:
     use:
       - jmssub
 
-  - name: 🇳🇱 荷兰节点
+  - name: JMS荷兰(高速优质,CN2 GIA,s5)
     type: url-test
     url: https://www.gstatic.com/generate_204
     interval: 300
@@ -98,11 +54,50 @@ proxy-groups:
     use:
       - jmssub
 
-  - name: 💰 省流量节点
-    type: select
+  - name: JMS Freedom省流量(0.1倍率,s801)
+    type: url-test
+    url: https://www.gstatic.com/generate_204
+    interval: 300
+    tolerance: 50
     filter: "c78s801\\."
     use:
       - jmssub
+
+  # ===== 智能节点组 =====
+  # 美国最快：s1-s3 自动测速
+  - name: ⚡ JMS美国最快
+    type: url-test
+    url: https://www.gstatic.com/generate_204
+    interval: 300
+    tolerance: 50
+    proxies:
+      - JMS洛杉矶(日常稳定,CN2 GT,s1)
+      - JMS洛杉矶(日常稳定,CN2 GT,s2)
+      - JMS洛杉矶(高速优质,CN2 GIA,s3)
+
+  # 全球最快：所有节点自动测速
+  - name: ⚡ JMS全球最快
+    type: url-test
+    url: https://www.gstatic.com/generate_204
+    interval: 300
+    tolerance: 50
+    proxies:
+      - JMS洛杉矶(日常稳定,CN2 GT,s1)
+      - JMS洛杉矶(日常稳定,CN2 GT,s2)
+      - JMS洛杉矶(高速优质,CN2 GIA,s3)
+      - JMS日本大阪(联通友好,Softbank,s4)
+      - JMS荷兰(高速优质,CN2 GIA,s5)
+      - JMS Freedom省流量(0.1倍率,s801)
+
+  # 稳定IP：s3优先→s1→s2（fallback故障转移）
+  - name: 🔄 JMS美国稳定IP
+    type: fallback
+    url: https://www.gstatic.com/generate_204
+    interval: 300
+    proxies:
+      - JMS洛杉矶(高速优质,CN2 GIA,s3)
+      - JMS洛杉矶(日常稳定,CN2 GT,s1)
+      - JMS洛杉矶(日常稳定,CN2 GT,s2)
 
   # ===== 规则分流组 =====
   - name: 🏠 内网地址
@@ -117,12 +112,12 @@ proxy-groups:
       - ⚡ JMS美国最快
       - ⚡ JMS全球最快
       - 🔄 JMS美国稳定IP
-      - 📍 s3-CN2GIA
-      - 📍 s1-CN2GT
-      - 📍 s2-CN2GT
-      - 🇯🇵 日本节点
-      - 🇳🇱 荷兰节点
-      - 💰 省流量节点
+      - JMS洛杉矶(高速优质,CN2 GIA,s3)
+      - JMS洛杉矶(日常稳定,CN2 GT,s1)
+      - JMS洛杉矶(日常稳定,CN2 GT,s2)
+      - JMS日本大阪(联通友好,Softbank,s4)
+      - JMS荷兰(高速优质,CN2 GIA,s5)
+      - JMS Freedom省流量(0.1倍率,s801)
 
   - name: 🤖 AI平台
     type: select
@@ -130,28 +125,28 @@ proxy-groups:
       - 🔄 JMS美国稳定IP
       - ⚡ JMS美国最快
       - ⚡ JMS全球最快
-      - 📍 s3-CN2GIA
-      - 📍 s1-CN2GT
-      - 📍 s2-CN2GT
-      - 🇯🇵 日本节点
-      - 🇳🇱 荷兰节点
-      - 💰 省流量节点
+      - JMS洛杉矶(高速优质,CN2 GIA,s3)
+      - JMS洛杉矶(日常稳定,CN2 GT,s1)
+      - JMS洛杉矶(日常稳定,CN2 GT,s2)
+      - JMS日本大阪(联通友好,Softbank,s4)
+      - JMS荷兰(高速优质,CN2 GIA,s5)
+      - JMS Freedom省流量(0.1倍率,s801)
       - 🎯 直连
 
   - name: ⛔ 广告拦截
     type: select
     proxies:
       - REJECT
+      - 🎯 直连
       - ⚡ JMS美国最快
       - ⚡ JMS全球最快
       - 🔄 JMS美国稳定IP
-      - 📍 s3-CN2GIA
-      - 📍 s1-CN2GT
-      - 📍 s2-CN2GT
-      - 🇯🇵 日本节点
-      - 🇳🇱 荷兰节点
-      - 💰 省流量节点
-      - 🎯 直连
+      - JMS洛杉矶(高速优质,CN2 GIA,s3)
+      - JMS洛杉矶(日常稳定,CN2 GT,s1)
+      - JMS洛杉矶(日常稳定,CN2 GT,s2)
+      - JMS日本大阪(联通友好,Softbank,s4)
+      - JMS荷兰(高速优质,CN2 GIA,s5)
+      - JMS Freedom省流量(0.1倍率,s801)
 
   - name: 📥 BT Tracker
     type: select
@@ -160,12 +155,12 @@ proxy-groups:
       - ⚡ JMS美国最快
       - ⚡ JMS全球最快
       - 🔄 JMS美国稳定IP
-      - 📍 s3-CN2GIA
-      - 📍 s1-CN2GT
-      - 📍 s2-CN2GT
-      - 🇯🇵 日本节点
-      - 🇳🇱 荷兰节点
-      - 💰 省流量节点
+      - JMS洛杉矶(高速优质,CN2 GIA,s3)
+      - JMS洛杉矶(日常稳定,CN2 GT,s1)
+      - JMS洛杉矶(日常稳定,CN2 GT,s2)
+      - JMS日本大阪(联通友好,Softbank,s4)
+      - JMS荷兰(高速优质,CN2 GIA,s5)
+      - JMS Freedom省流量(0.1倍率,s801)
 
   - name: 🌐 国外流量
     type: select
@@ -173,12 +168,12 @@ proxy-groups:
       - ⚡ JMS美国最快
       - ⚡ JMS全球最快
       - 🔄 JMS美国稳定IP
-      - 📍 s3-CN2GIA
-      - 📍 s1-CN2GT
-      - 📍 s2-CN2GT
-      - 🇯🇵 日本节点
-      - 🇳🇱 荷兰节点
-      - 💰 省流量节点
+      - JMS洛杉矶(高速优质,CN2 GIA,s3)
+      - JMS洛杉矶(日常稳定,CN2 GT,s1)
+      - JMS洛杉矶(日常稳定,CN2 GT,s2)
+      - JMS日本大阪(联通友好,Softbank,s4)
+      - JMS荷兰(高速优质,CN2 GIA,s5)
+      - JMS Freedom省流量(0.1倍率,s801)
       - 🎯 直连
 
   - name: 🐟 漏网之鱼
@@ -187,12 +182,12 @@ proxy-groups:
       - ⚡ JMS美国最快
       - ⚡ JMS全球最快
       - 🔄 JMS美国稳定IP
-      - 📍 s3-CN2GIA
-      - 📍 s1-CN2GT
-      - 📍 s2-CN2GT
-      - 🇯🇵 日本节点
-      - 🇳🇱 荷兰节点
-      - 💰 省流量节点
+      - JMS洛杉矶(高速优质,CN2 GIA,s3)
+      - JMS洛杉矶(日常稳定,CN2 GT,s1)
+      - JMS洛杉矶(日常稳定,CN2 GT,s2)
+      - JMS日本大阪(联通友好,Softbank,s4)
+      - JMS荷兰(高速优质,CN2 GIA,s5)
+      - JMS Freedom省流量(0.1倍率,s801)
       - 🎯 直连
 
   - name: 🎯 直连
@@ -202,7 +197,6 @@ proxy-groups:
 
 # 规则提供者
 rule-providers:
-  # 内网地址
   private:
     type: http
     behavior: domain
@@ -217,7 +211,6 @@ rule-providers:
     path: ./ruleset/privateip.list
     interval: 86400
 
-  # 广告
   ads:
     type: http
     behavior: domain
@@ -225,7 +218,6 @@ rule-providers:
     path: ./ruleset/ads.list
     interval: 86400
 
-  # BT Tracker
   trackerslist:
     type: http
     behavior: domain
@@ -233,7 +225,6 @@ rule-providers:
     path: ./ruleset/trackerslist.list
     interval: 86400
 
-  # AI 平台
   ai:
     type: http
     behavior: domain
@@ -241,7 +232,6 @@ rule-providers:
     path: ./ruleset/ai.list
     interval: 86400
 
-  # 国内域名（合并了 cn + microsoft-cn + apple-cn + google-cn + games-cn）
   cn:
     type: http
     behavior: domain
@@ -270,7 +260,6 @@ rule-providers:
     path: ./ruleset/google-cn.list
     interval: 86400
 
-  # 国内IP
   cnip:
     type: http
     behavior: ipcidr
@@ -278,7 +267,6 @@ rule-providers:
     path: ./ruleset/cnip.list
     interval: 86400
 
-  # 国外代理域名
   proxy:
     type: http
     behavior: domain
@@ -286,29 +274,29 @@ rule-providers:
     path: ./ruleset/proxy.list
     interval: 86400
 
-# 规则（顺序很重要，先匹配先生效）
+# 规则（顺序重要，先匹配先生效）
 rules:
-  # 1. 内网地址 → 直连
+  # 1. 内网 → 直连
   - RULE-SET,private,🏠 内网地址
   - RULE-SET,privateip,🏠 内网地址
 
-  # 2. 广告 → 可选拦截
+  # 2. 广告 → 拦截
   - RULE-SET,ads,⛔ 广告拦截
 
-  # 3. BT Tracker → 直连优先
+  # 3. BT Tracker → 直连
   - RULE-SET,trackerslist,📥 BT Tracker
 
-  # 4. AI 平台 → 代理优先
+  # 4. AI → 代理
   - RULE-SET,ai,🤖 AI平台
 
-  # 5. 国内流量 → 直连
+  # 5. 国内 → 直连
   - RULE-SET,cn,🇨🇳 国内流量
   - RULE-SET,microsoft-cn,🇨🇳 国内流量
   - RULE-SET,apple-cn,🇨🇳 国内流量
   - RULE-SET,google-cn,🇨🇳 国内流量
   - RULE-SET,cnip,🇨🇳 国内流量
 
-  # 6. 国外流量 → 代理
+  # 6. 国外 → 代理
   - RULE-SET,proxy,🌐 国外流量
 
   # 7. 兜底
